<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WARMApp</string>
    <string name="warmapp">WARMApp</string>
    <string name="welcome">Welcome!</string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="sign_up.">Sign up.</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login.">Login.</string>
    <string name="forget_the_password">Forget the password?</string>
    <string name="have_a_account">Have a Account?</string>
    <string name="trainee">trainee</string>
    <string name="trainer">trainer</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="password_verification">Password Verification</string>
    <string name="first_name">First Name</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email_to_reset_the_password">Enter email to reset the password:</string>
    <string name="description">Description :</string>
    <string name="price">Price :</string>
    <string name="starting_time">Starting time :</string>
    <string name="address">Address :</string>
    <string name="textview">TextView</string>
    <string name="date">Date :</string>
    <string name="ending_time">Ending time:</string>
    <string name="title">Title :</string>
    <string name="features">Features :</string>

    <string-array name= "Titles">
        <item>Yoga</item>
        <item>Pilates</item>
        <item>Trx</item>
        <item>Kickboxing</item>
        <item>Zumba</item>
        <item>Aerobic</item>
        <item>Thai boxing</item>
        <item>Bodybuilding</item>
        <item>Running</item>
        <item>Bicycle</item>
        <item>Football</item>
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Flexibility</item>
        <item>Karate</item>
        <item>Judo</item>
        <item>Volleyball</item>
        <item>Athletics</item>
        <item>Crossfit</item>
        <item>Swing</item>
        <item>Spinning</item>
        <item>Badminton</item>
        <item>Bows</item>
        <item>Pole dance</item>
        <item>Fencing</item>
        <item>Twerking</item>
        <item>Gymnastics</item>
    </string-array>

    <string-array name= "Cities">
        <item>Acre</item>
        <item>Afula</item>
        <item>Arad</item>
        <item>Arraba</item>
        <item>Ashdod</item>
        <item>Ashkelon</item>
        <item>Baqa al-Gharbiyye</item>
        <item>Bat Yam</item>
        <item>Beersheba</item>
        <item>Beit Shean</item>
        <item>Beit Shemesh</item>
        <item>Bnei Brak</item>
        <item>Dimona</item>-->
        <item>Eilat</item>-->
        <item>Elad</item>-->
        <item>Givat Shmuel</item>-->
        <item>Givatayim</item>-->
        <item>Hadera</item>-->
        <item>Haifa</item>-->
        <item>Herzliya</item>-->
        <item>Hod HaSharon</item>-->
        <item>Holon</item>-->
        <item>Jerusalem</item>-->
        <item>Kafr Qasim</item>-->
        <item>Karmiel</item>-->
        <item>Kfar Saba</item>-->
        <item>Kfar Yona</item>-->
        <item>Kiryat Ata</item>-->
        <item>Kiryat Bialik</item>-->
        <item>Kiryat Gat</item>-->
        <item>Kiryat Malakhi</item>-->
        <item>Kiryat Motzkin</item>-->
        <item>Kiryat Ono</item>-->
        <item>Kiryat Shmona</item>-->
        <item>Kiryat Yam</item>-->
        <item>Lod</item>-->
        <item>Maalot-Tarshiha</item>-->
        <item>Migdal HaEmek</item>-->
        <item>Modiin-Maccabim-Reut</item>-->
        <item>Nahariya</item>-->
        <item>Nazareth</item>-->
        <item>Nesher</item>-->
        <item>Ness Ziona</item>-->
        <item>Netanya</item>-->
        <item>Netivot</item>-->
        <item>Nof HaGalil</item>-->
        <item>Ofakim</item>-->
        <item>Or Akiva</item>-->
        <item>Or Yehuda</item>-->
        <item>Petah Tikva</item>-->
        <item>Qalansawe</item>-->
        <item>Raanana</item>-->
        <item>Rahat</item>-->
        <item>Ramat Gan</item>-->
        <item>Ramat HaSharon</item>-->
        <item>Ramla</item>-->
        <item>Rehovot</item>-->
        <item>Rishon LeZion</item>-->
        <item>Rosh HaAyin</item>-->
        <item>Safed</item>-->
        <item>Sakhnin</item>-->
        <item>Sderot</item>-->
        <item>Shefa-Amr</item>-->
        <item>Tamra</item>-->
        <item>Tayibe</item>-->
        <item>Tel Aviv-Yafo</item>-->
        <item>Tiberias</item>-->
        <item>Tira</item>-->
        <item>Tirat Carmel</item>-->
        <item>Umm al-Fahm</item>-->
        <item>Yavne</item>-->
        <item>Yehud-Monosson</item>-->
        <item>Yokneam Illit</item>-->
    </string-array>

    <string-array name= "Features">
        <item>Group training</item>
        <item>Outdoor training</item>
        <item>For men only</item>
        <item>For women only</item>
        <item>Youth</item>
        <item>Children</item>
        <item>For pregnant women</item>
        <item>Postpartum women</item>
        <item>Preparation for competitions</item>
        <item>Injury rehabilitation</item>
    </string-array>

    <string-array name="rangeSliderValues">
        <item>100</item>
        <item>250</item>
    </string-array>
</resources>