<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/txt_enter_email_to_reset"
        app:layout_constraintStart_toStartOf="@+id/txt_enter_email_to_reset"
        app:layout_constraintTop_toBottomOf="@+id/txt_enter_email_to_reset"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_alignEnd="@+id/edit_email"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        app:backgroundTint="@color/grey_500"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_email"
        android:layout_alignEnd="@+id/edit_email"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/grey_500"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

    <TextView
        android:id="@+id/txt_enter_email_to_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="50dp"
        android:text="@string/enter_email_to_reset_the_password"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>