<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/background_2">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <RadioButton
            android:id="@+id/radio_trainee"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/trainee"
            android:textColor="#81C784" />

        <RadioButton
            android:id="@+id/radio_trainer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/trainer"
            android:textColor="#81C784" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_first_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:hint="@string/first_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_last_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/last_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/layout_first_name"
        app:layout_constraintStart_toStartOf="@+id/layout_first_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_first_name"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/phone_number"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/layout_last_name"
        app:layout_constraintStart_toStartOf="@+id/layout_last_name"
        app:layout_constraintTop_toBottomOf="@+id/layout_last_name"
        app:prefixText="+972"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@+id/layout_phone"
        app:layout_constraintStart_toStartOf="@+id/layout_phone"
        app:layout_constraintTop_toBottomOf="@+id/layout_phone"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:helperText="Enter Minimum 1 Special Character"
        app:helperTextTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/layout_email"
        app:layout_constraintStart_toStartOf="@+id/layout_email"
        app:layout_constraintTop_toBottomOf="@+id/layout_email"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPassword"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_verification"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password_verification"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@+id/layout_password"
        app:layout_constraintStart_toStartOf="@+id/layout_password"
        app:layout_constraintTop_toBottomOf="@+id/layout_password"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:inputType="textPassword"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:backgroundTint="#388E3C"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="@+id/layout_password_verification"
        app:layout_constraintStart_toStartOf="@+id/layout_password_verification"
        app:layout_constraintTop_toBottomOf="@+id/layout_password_verification" />

    <TextView
        android:id="@+id/have_account_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-40dp"
        android:layout_marginTop="100dp"
        android:text="@string/have_a_account"
        android:textColor="#595959"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:text="@string/login."
        android:textColor="#B71C1C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/have_account_txt"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>