<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity"
    android:background="@drawable/background_1">


    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nice_to_see_you_again"
        android:textColor="#6A6A6A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/welcome_txt"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="@+id/welcome_txt"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt" />

    <TextView
        android:id="@+id/not_member_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/you_are_not_a_member"
        android:textColor="#595959"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="28dp"
        android:text="@string/sign_up."
        android:textColor="#B71C1C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/not_member_txt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        app:endIconMode="clear_text"
        app:hintTextColor="#388E3C"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:startIconDrawable="@drawable/ic_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:counterTextColor="@color/grey_500"
        app:endIconMode="password_toggle"
        app:hintTextColor="#388E3C"
        app:layout_constraintEnd_toEndOf="@+id/email_input_layout"
        app:layout_constraintStart_toStartOf="@+id/email_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_input_layout"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:text="@string/login"
        app:backgroundTint="#388E3C"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="@+id/forget_password_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/forget_password_txt"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_txt" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="@color/white"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:srcCompat="@drawable/ic_google"
        app:tint="@null" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttom_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:backgroundTint="#FFFFFF"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:srcCompat="@drawable/ic_facebook"
        app:tint="@null" />

    <TextView
        android:id="@+id/forget_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/forget_the_password"
        android:textColor="@color/grey_400"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_input_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>